Revert "Fix `z-index` bug caused by `sticky-discussion-sidebar` (#2598)"
This reverts commit 585a5886c86ff1986a62c1b537126e70ab9ec1f0.

--- a/source/features/sticky-discussion-sidebar.css
+++ b/source/features/sticky-discussion-sidebar.css
@@ -11,9 +11,3 @@
 .rgh-sticky-sidebar + .border-top {
 	display: none;
 }
-
-/* Fixes issue #2576 and #2601 where opening sidebar modal changes the z-index of certain images and elements */
-[class*='TimelineItem'],
-.tabnav-tabs {
-	z-index: 0 !important;
-}
